# Tomoji

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
backend/: config.py  main.py  session.py
backend/services/: face_detector.py  font_builder.py
backend/tests/: conftest.py  test_api.py  test_face_detector.py  test_font_builder.py  test_rate_limiting.py  test_session.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/fonts/: twemoji.css
frontend/src/: App.tsx  index.css  index.tsx
frontend/src/components/: CaptureModal.tsx  ExportView.tsx  Gallery.tsx  SessionRedirect.tsx
frontend/src/lib/: api.ts  cookies.ts  webcam.ts
